# Automated-IT-Service-Manager

./: .env.example  .gitignore  Makefile  PROJECT_STATUS.md  README.md  alembic.ini  docker-compose.yml  meshcentral-config.json  pyproject.toml  requirements.txt  test_scenarios.py
data/runbooks/: clear_cache.yaml  diagnose_internet.yaml  flush_dns.yaml  reconnect_vpn.yaml  reset_network_adapter.yaml  reset_network_stack.yaml  restart_app_service.yaml  restart_db_connection_pool.yaml  restart_web_service.yaml  scale_workers.yaml
docs/: DEMO.md  MESHCENTRAL_PLAN.md  SynapseITSM_Executive_Brief.html
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_users_and_rbac.py  0003_user_device_connection.py
scripts/: reset_monitoring_tickets.py  test_scenarios.py  trace_scenarios.py
scripts/data/chroma/: chroma.sqlite3
src/synapse/: config.py  exec_target.py  graph.py  llm.py  state.py  tracing.py
src/synapse/agents/: intake.py  monitoring.py  rca.py  remediation.py  supervisor.py
src/synapse/api/: deps.py  job_result_store.py  main.py  notification_store.py  pending_store.py  schemas.py  security.py
src/synapse/db/: base.py  models.py  repositories.py  seed.py
src/synapse/eval/: dataset.jsonl  harness.py
src/synapse/mcp_servers/: meshcentral_client.py  runbook_client.py  runbook_server.py
src/synapse/nodes/: close_ticket.py  deflect.py  fast_path.py  hitl.py  notify_it.py  report.py  (+2 more)
tests/: conftest.py  test_db.py  test_e2e.py  test_priority.py  test_runbook_mcp.py  test_state.py
ui/: chat_app.py  dashboard.py  device_manager.py
(+19 files in other folders)
