[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapseitsm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "anyio>=4.5",
    "asyncpg>=0.29",
    "bcrypt>=4.1",
    "chainlit>=2.0",
    "chromadb>=0.5",
    "email-validator>=2.0",
    "fastapi>=0.115",
    "fastmcp>=2.3",
    "httpx>=0.27",
    "langchain-core>=0.3",
    "langchain-mcp-adapters>=0.1.0",
    "langfuse>=2.50",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0",
    "litellm>=1.50",
    "mcp>=1.7",
    "numpy>=1.26",
    "pandas>=2.1",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.7",
    "pyjwt>=2.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "sentence-transformers>=3.0",
    "sqlalchemy>=2.0,<3.0",
    "streamlit>=1.40",
    "uvicorn[standard]>=0.32",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
